@@ -2,6 +2,6 @@
 #     https://github.com/ematvey/pybacktest
 set echo True
 # You dont need to have a listener thread running
-back feed read_mt4_csv EURUSD60-2014.csv EURUSD 60 2014
+back feed read_mt4_csv tmp/EURUSD60-2014.csv EURUSD 60 2014
 back feed info
 back feed plot
