@@ -1,10 +1,10 @@
-# These tests will only work if you have pyrabbit installed:
+#  These tests will only work if you have pyrabbit installed:
 #     http://pypi.python.org/pypi/pyrabbit
-# and have the 'rabbitmq_management' plugin to rabbitmq enabled.
-# See the OS command 'rabbitmq-plugins list' and make sure
-# the 'rabbitmq_management' and 'rabbitmq_web_dispatch' plugins are enabled.
+#  and have the 'rabbitmq_management' plugin to rabbitmq enabled.
+#  See the OS command 'rabbitmq-plugins list' and make sure
+#  the 'rabbitmq_management' and 'rabbitmq_web_dispatch' plugins are enabled.
+#  You dont need to have a listener thread running
 set echo True
-# You dont need to have a listener thread running
 rabbit get vhost_names
 rabbit get channels
 rabbit get connections
