@@ -1,4 +1,4 @@
-# Subscribe to messages from RabbitMQ on a given topic:
+#  Subscribe to messages from RabbitMQ on a given topic:
 # These tests will only work if you have an OTMql4AMQP enabled Metatrader running,
 # the Experts/OTMql4/OTPyTestPikaEA.mq4 attached to a chart in it, and
 # the RabbitMQ server configured and running.
