@@ -1,8 +1,40 @@
+== Features Tests
+
+[[UseCases]] are the starting point for our Behaviour Driven Development (BDD).
+The use cases are elaborated into required feature need to fulfil
+the use case, which are turned into BDD test features and scenarios using
+[[py-bdd|https://github.com/pytest-dev/pytest-bdd/]].
+
+The currently documented features can be found in the 
+[[tests/features/|https://github.com/OpenTrading/OpenTrader/raw/master/tests/features/]]
+directory of the distribution.
+
+
 
 === OTCmd2_ini
 
+**[[OTCmd2_ini.txt|https://github.com/OpenTrading/OpenTrader/raw/master/tests/features/OTCmd2_ini.feature]]**
+
+**Feature:** OTCmd2
+  
     Settings for OTCmd2 are in a configobj .ini file that by default is
     found in the same place that the OTCmd2.py file is found, but you can
-    use the OTCmd2.py '-c' or '--config' command-line option to specify
+    use the OTCmd2.py {{{-c}}} or {{{--config}}} command-line option to specify
     an alternate location. It uses configobj with unrepr=True
     so the values are Python, not just strings.
+    
+**Scenario:** Settings for OTCmd2 are in a configobj .ini file
+{{{
+
+      Given The configobj OTCmd2.ini exists
+      And The configobj OTCmd2.ini is parseable
+      And The configobj has keys:
+                          OTCmd2
+                          RabbitMQ
+                          backtest
+                          feed.plot.params
+                          matplotlib.rcParams
+      And The configobj Section "OTCmd2" has keys:
+                          iRetvalTimeout
+      Then Life is Good!
+}}}
